#HTML Fix  - Fixed shifting page bug where centers differed per page    => {html: overflow-y: scroll}

--- a/_assets/scss/base/_base.scss
+++ b/_assets/scss/base/_base.scss
@@ -7,6 +7,7 @@
 
 html {
   font-size: 62.5%;
+  overflow-y: scroll; // fixes shifting of multiple pages with varying center specs
 }
 
 * {
